# cross-libs-bug

./: Cargo.toml  README.md
src/: main.rs
