[package]
name = "cross-libs-bug"
version = "0.1.0"
edition = "2024"

[dependencies]
udev = "0.9.3"

[workspace.metadata.cross.target.aarch64-unknown-linux-gnu]
pre-build = [
    "dpkg --add-architecture $CROSS_DEB_ARCH",
    "apt-get update && apt-get -y install libudev-dev libudev1:$CROSS_DEB_ARCH"
]
